The information section has been completed

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -7,6 +7,7 @@ $primary-font:"Kanit", sans-serif;
 
 $primary-color: #3583f0;
 $secondary-color: #1D2026;
+$tertiary-color: #f8f9fa;
 
 //Font Size
 
