--- a/src/components/ınform/ınform.module.scss
+++ b/src/components/ınform/ınform.module.scss
@@ -50,3 +50,9 @@
     display: flex;
     align-items: center;
 }
+
+.ınformSectionTwo{
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
