--- a/src/components/ours/ours.module.scss
+++ b/src/components/ours/ours.module.scss
@@ -2,12 +2,11 @@
 
 
 .oursContainer {
-    max-width: 1400px;
     margin: 0 auto;
     padding: 20px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    max-height: 200px;
   }
   
   .oursContent {
