Location Mathematics Class Categories Study was carried out

--- a/src/app/_variables.scss
+++ b/src/app/_variables.scss
@@ -8,6 +8,7 @@ $primary-font:"Kanit", sans-serif;
 $primary-color: #3583f0;
 $secondary-color: #1D2026;
 $tertiary-color: #f8f9fa;
+$background-color: #f8f1e9;
 
 //Font Size
 
