--- a/src/app/ours/ourspage.module.scss
+++ b/src/app/ours/ourspage.module.scss
@@ -1,6 +1,8 @@
 .oursPageSection{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 2rem;
     margin: 0 auto;
-    max-width: 1200px;
+    gap: -100px;
+    max-width: 1500px;
 }
