--- a/src/components/mainsection/mainsection.module.scss
+++ b/src/components/mainsection/mainsection.module.scss
@@ -36,20 +36,22 @@
     }
 }
 
-.mainSectionButton { 
-    border: 2px solid $secondary-color; /* Kenarlık kalınlığı ve rengi */
-    color: white; /* Metin rengi */
-    padding: 10px;
-    border-radius: 10px; /* Köşe yuvarlama */
-    font-weight: 500; /* Font ağırlığı */
-    text-align: center; /* Metni ortalar */
-    display: inline-flex; /* Butonu hizalar */
-    align-items: center; /* Dikeyde ortalar */
-    justify-content: center; /* Yatayda ortalar */
-    transition: background-color 0.3s ease; /* Arka plan rengi geçiş efekti */
-    text-decoration: none; /* Alt çizgi kaldırır */
-
+.mainSectionButton {
+    border: 2px solid $secondary-color; 
+    color: $tertiary-color;
+    padding: 10px 20px; 
+    border-radius: 10px; 
+    font-weight: 500; 
+    text-align: center; 
+    display: inline-flex; 
+    align-items: center; 
+    justify-content: center;
+    transition: background-color 0.3s ease, color 0.3s ease; 
+    text-decoration: none; 
+    background-color: transparent; 
+    
     &:hover {
-        background-color: $secondary-color; /* Hover durumunda arka plan rengi */
+        background-color: $secondary-color; 
+        color: white; 
     }
 }
