--- a/src/components/mainsection/mainsection.module.scss
+++ b/src/components/mainsection/mainsection.module.scss
@@ -1,57 +1,85 @@
 @use "../../app/_variables.scss" as *;
 
-.mainSection{
+.mainSection {
     padding: 20px;
     border-radius: 10px;
     gap: 150px;
     margin: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     justify-content: space-between;
     font-family: $primary-font;
+    background: linear-gradient(135deg, lighten($primary-color, 20%), $tertiary-color);
 
     @media (max-width: 768px) {
         flex-direction: column;
-        gap: 30px; // Küçük ekranlar için boşluk
+        gap: 30px;
         padding: 10px;
         margin: 10px;
     }
 }
+
 .mainSectionDescription {
     color: $secondary-color;
     font-weight: 500;
-    line-height: 1.5;
-    text-align: justify;  // Metni iki yana yaslar
+    line-height: 1.7;
+    text-align: justify;
+    margin-right: 20px;
+
+    @media (max-width: 768px) {
+        margin-right: 0;
+        max-width: 100%;
+    }
 }
 
 .mainSectionImage {
     max-width: 400px;
     max-height: 500px;
     border-radius: 20%;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+
+    &:hover {
+        transform: scale(1.05);
+        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
+    }
 
     @media (max-width: 768px) {
-        max-width: 250px;
-        max-height: 200px;
+       display: none;
     }
 }
 
+.mainSectionBoxButton {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
 .mainSectionButton {
-    border: 2px solid $secondary-color; 
-    color: $tertiary-color;
-    padding: 10px 20px; 
-    border-radius: 10px; 
-    font-weight: 500; 
-    text-align: center; 
-    display: inline-flex; 
-    align-items: center; 
+    border: 2px solid $secondary-color;
+    color: $secondary-color;
+    padding: 12px 25px;
+    border-radius: 12px;
+    font-weight: 600;
+    text-align: center;
+    display: inline-flex;
+    align-items: center;
     justify-content: center;
-    transition: background-color 0.3s ease, color 0.3s ease; 
-    text-decoration: none; 
-    background-color: transparent; 
+    transition: background-color 0.3s ease, color 0.3s ease, transform 0.2s ease;
+    text-decoration: none;
+    background-color: rgba(255, 255, 255, 0.6); // Semi-transparent background
+    backdrop-filter: blur(8px); // Background blur effect
     
     &:hover {
-        background-color: $secondary-color; 
-        color: white; 
+        background-color: rgba(255, 255, 255, 0.8); // Slightly more opaque on hover
+        color: $primary-color;
+        transform: translateY(-2px);
+        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    &:active {
+        transform: translateY(0);
+        box-shadow: none;
     }
 }
