--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -32,7 +32,13 @@
     margin: 0 10px;
     gap: 10px;
     font-size: 1rem;
-    flex: 1; // Esnek genişlik sağlamak için flex kullanıyoruz
+    flex: 1; 
+
+    @media screen and (max-width: 768px) {
+        margin-top: 20px;
+        align-items: center;
+        
+    }
 }
 
 .footerBoxH2 {
@@ -84,6 +90,12 @@
     gap: 15px;
     flex-wrap: wrap;
     justify-content: center;
+    border: 2px solid red;
+
+    @media screen and (max-width: 768px) {
+          display: none;
+        
+    }
 }
 
 .ınformSectionLink {
