--- a/src/components/ınform/ınform.module.scss
+++ b/src/components/ınform/ınform.module.scss
@@ -35,11 +35,13 @@
     color: $secondary-color;
     font-family: $primary-font;
     font-size: 12px;
-    font-weight: 500;
+    font-weight: 700;
     text-decoration: none;
     display: flex;
     align-items: center;
+
     gap: 5px;
+    font-family: $primary-font;
 }
 
 .ınformSectionLink:hover {
