--- a/src/components/fifthgradePage/fifthgradePage.module.scss
+++ b/src/components/fifthgradePage/fifthgradePage.module.scss
@@ -8,43 +8,45 @@ $background-color: #f8f1e9;
   color: darken($secondary-color, 20%);
   text-align: center;
   margin: 1.5rem 0;
-  letter-spacing: 1.5px; // Added for better readability
+  letter-spacing: 1.5px;
   font-weight: 700;
-  border-bottom: 3px solid $primary-color; // Slightly thicker for emphasis
-  padding-bottom: 0.75rem; // More padding for balance
+  border-bottom: 3px solid $primary-color;
+  padding-bottom: 0.75rem;
   font-family: $primary-font;
 }
 
 .container {
   display: grid; 
   grid-template-columns: repeat(2, 1fr);
-  gap: 1.5rem; // Slightly increased for better spacing
-  padding: 2.5rem; // More padding for a more spacious feel
+  gap: 1.5rem;
+  padding: 2.5rem;
   background-color: $background-color;
-  color: darken($secondary-color, 15%); // Slightly darker for contrast
+  color: darken($secondary-color, 15%);
   margin: 20px auto;
-  border-radius: 12px; // Increased for a smoother look
-  max-width: 850px; // Increased width for larger screens
-  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1); // Increased shadow for depth
+  border-radius: 12px;
+  max-width: 850px;
+  box-shadow: 0 6px 15px rgba(0, 0, 0, 0.1);
 
-  p {
+  p, a {
     background-color: $tertiary-color;
     font-family: $primary-font;
-    padding: 1.75rem; // More padding for comfort
-    border-radius: 10px; // Increased for a smoother feel
+    text-decoration: none;
+    padding: 1.75rem;
+    border-radius: 10px;
     text-align: left;
-    line-height: 1.8; // Increased for better readability
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08); // Slightly more shadow for depth
-    transition: background-color 0.3s ease, transform 0.2s ease; // Added smooth hover effect
+    line-height: 1.8;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.08);
+    transition: background-color 0.3s ease, transform 0.2s ease;
+    color: darken($secondary-color, 15%); // Link rengi buraya eklendi
 
     &:hover {
       background-color: lighten($tertiary-color, 5%);
-      transform: translateY(-2px); // Subtle lift on hover
+      transform: translateY(-2px);
     }
   }
 
   @media (max-width: 600px) {
     grid-template-columns: 1fr;
-    padding: 1.5rem; // Reduced padding for smaller screens
+    padding: 1.5rem;
   }
 }
