chore: Refactor header component to use CSS modules and optimize logo rendering

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -25,6 +25,17 @@
   }
 }
 
+.headerLogo{
+  width: 200px;
+  height: 200px;
+
+  @media screen and (max-width: 768px) {
+    width: 130px;
+    height: 130px;
+    
+  }
+}
+
 .link {
   list-style: none;
   display: flex;
