chore: Update sass to version 1.79.4 and make styling changes in footer component
- Update sass dependency in package.json to version 1.79.4
- Add top and bottom border styles to footer component in footer.module.scss
- Remove unnecessary CSS rule in footer.module.scss

Refs: #123

--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -7,6 +7,7 @@
     padding: 10px 20px;
     position: relative;
     flex-wrap: wrap;
+    border-top: 1px solid $secondary-color; // Üst çizgi eklendi
 }
 
 .col {
@@ -37,7 +38,6 @@
     @media screen and (max-width: 768px) {
         margin-top: 20px;
         align-items: center;
-        
     }
 }
 
@@ -92,8 +92,7 @@
     justify-content: center;
 
     @media screen and (max-width: 768px) {
-          display: none;
-        
+        display: none;
     }
 }
 
@@ -110,7 +109,7 @@
 
 .footerBottom {
     margin-top: 5px;
-    border-top: 1px solid $secondary-color;
+    border-top: 1px solid $secondary-color; // Alt çizgi
     text-align: center;
 }
 
