--- a/src/app/ours/ourspage.module.scss
+++ b/src/app/ours/ourspage.module.scss
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     gap: 2rem;
-    margin: 0 auto;
+    margin: 100px auto;
     gap: -100px;
     max-width: 1500px;
 
