--- a/src/components/CommunicationPage/CommunicationPage.module.scss
+++ b/src/components/CommunicationPage/CommunicationPage.module.scss
@@ -121,7 +121,7 @@
     display: flex;
     flex-direction: column;
     max-width: 1200px;
-    margin: 0 auto;
+    margin: 50px auto;
     gap: 10px; /* Alanlar arasına boşluk azaltıldı */
     text-align: center;
 
