Update frequentlyAsked.module.scss and header.module.scss

--- a/src/components/frequentlyAsked/frequentlyasked.module.scss
+++ b/src/components/frequentlyAsked/frequentlyasked.module.scss
@@ -1,7 +1,7 @@
 .frequentlyAsked {
     padding: 40px;
     border-radius: 10px;
-    max-width: 100%;
+    max-width: 1500px;
     margin: 0 auto;
 }
 
