--- a/src/components/mainsection/mainsection.module.scss
+++ b/src/components/mainsection/mainsection.module.scss
@@ -3,15 +3,13 @@
 .mainSection {
     padding: 20px;
     border-radius: 10px;
+    max-width: 1500px;
+    margin: 0 auto;
     gap: 150px;
-    margin: 20px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-    display: flex;
+    text-align: center;
     align-items: center;
     justify-content: space-between;
     font-family: $primary-font;
-
-    background: linear-gradient(135deg, lighten($primary-color, 20%), $tertiary-color);
 
     @media (max-width: 768px) {
         flex-direction: column;
@@ -35,14 +33,16 @@
 }
 
 .mainSectionTitle {
-    font-size: 1.75rem; /* Büyük başlık boyutu */
+    font-size: 2.2rem; /* Büyük başlık boyutu */
     color: #222; /* Koyu başlık rengi */
     font-weight: 800; /* Daha kalın yazı */
     letter-spacing: 1.5px; /* Harfler arası geniş boşluk */
     text-transform: uppercase; /* Büyük harf */
     padding: 20px 0; /* Üst ve alt boşluk */
-    margin-bottom: 40px; /* Başlık altı boşluk */
     position: relative; /* Alt çizgiyi yerleştirmek için gerekli */
+    max-width: 80%;
+    margin: 0 auto;
+
 }
 
 
@@ -51,13 +51,6 @@
     max-width: 400px;
     max-height: 500px;
     border-radius: 20%;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-
-    &:hover {
-        transform: scale(1.05);
-        box-shadow: 0 6px 20px rgba(0, 0, 0, 0.3);
-    }
 
     @media (max-width: 768px) {
        display: none;
@@ -95,5 +88,17 @@
     &:active {
         transform: translateY(0);
         box-shadow: none;
+    }
+}
+ 
+.mainSectionContainer {
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    justify-content: space-between;
+
+    @media (max-width: 768px) {
+        flex-direction: column;
+        gap: 30px;
     }
 }
