--- a/src/components/membership/membership.module.scss
+++ b/src/components/membership/membership.module.scss
@@ -5,7 +5,6 @@
     font-family: $primary-font;
     border-radius: 8px; // Kenarları yuvarlat
     margin: 20px auto; // Üst ve alt boşluk
-    width: 80%;
     max-width: 1200px; // Maksimum genişlik
 
     // Responsive tasarım için medya sorguları
@@ -46,10 +45,9 @@
     max-width: 600px; // Metin içeriği için maksimum genişlik
     margin-left: 20px; // Resim ile metin arasına boşluk ekler
 
-    // Responsive tasarım için medya sorguları
     @media (max-width: 768px) {
         margin-left: 0; // Küçük ekranlarda soldan boşluğu kaldır
-        text-align: center; // Metni ortala
+        text-align: justify; // Metni ortala
         margin-top: 20px; // Üstte boşluk ekle
     }
 }
